# ssi_api_client

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ssi/: api_client.py
