[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssi.api-client"
version = "1.3.0"
description = "Python HTTP and WebSocket client for Subsurface Insights APIs."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Erek Alper", email = "erek.alper@subsurfaceinsights.com"},
    {name = "Doug Johnson", email = "dougvj@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["ssi*"]
namespaces = true

[tool.setuptools.package-data]
"ssi" = ["py.typed"]
